Remove blur effects on firefox due to preformance issues.

--- a/src/common/components/Modal/Modal.module.scss
+++ b/src/common/components/Modal/Modal.module.scss
@@ -10,6 +10,10 @@
   padding-bottom: 100px;
   backdrop-filter: blur(10px);
   box-sizing: border-box;
+
+  :global(.isFirefox) & {
+    backdrop-filter: none;
+  }
 }
 
 .scroll {
